--- a/08_deep_learning.ipynb
+++ b/08_deep_learning.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c4bc00d",
+   "id": "eab94174",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1ca63c2",
+   "id": "76fc4562",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e15ed35",
+   "id": "bf138e58",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0310ea3",
+   "id": "9c67fece",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6090dde8",
+   "id": "c89d89a5",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39db69ee",
+   "id": "e5a1cafb",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8004759",
+   "id": "b7e6798c",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "727bfd8b",
+   "id": "5936585a",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "200c6e5c",
+   "id": "2d024f6b",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef756572",
+   "id": "dcd6076b",
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f480021",
+   "id": "84ad39f2",
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0910a5cc",
+   "id": "3fdd8f95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a34fa6c",
+   "id": "ba0b38db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,17 +707,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ccb4229",
+   "id": "8bcfc895",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install torch               # this may take a bit of time"
+    "!pip install torch --no-cache-dir         # this may take a bit of time"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "691c6a97",
+   "id": "c7d1306d",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e7c53d5",
+   "id": "85656578",
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15188238",
+   "id": "d020a589",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab7521e8",
+   "id": "763fb9e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc650da7",
+   "id": "77aca9c0",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "535c2c0b",
+   "id": "afbceaea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82b9c984",
+   "id": "62c2ff35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7f06d15",
+   "id": "0afc4ecf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fe463d8",
+   "id": "fa581915",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -943,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cbe061a",
+   "id": "08d723b2",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -976,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b64e0b97",
+   "id": "fe0af7e3",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4f9b65e",
+   "id": "4e35d7f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eb1ee4a",
+   "id": "7c11af9f",
    "metadata": {},
    "outputs": [],
    "source": [
